--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,38 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Noto Sans";
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  background-color: rgb(248, 246, 246);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.loader {
+  background-color: rgb(248, 246, 246);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.inputs {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+.ck-editor__editable_inline {
+  height: 200px;
 }
 
-.App-link {
-  color: #61dafb;
+.inputs label {
+  margin-top: 10px;
+  margin-bottom: -4px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.radio {
+  margin-right: 12px;
+  margin-left: -4px;
+}
+
+.input {
+  padding: 8px 15px;
+  margin: 10px 0;
+  border-radius: 4px;
 }
